# DnB_harness

./: .gitignore  AGENTS.md  README.md  TEAM_WEB_QUICKSTART.md  W1_ONTOLOGY_PIPELINE.md  pyproject.toml  requirements.txt  test_w1_ontology_pipeline.py  보고서_2파트_수정최종.md
.playwright-mcp/: page-2026-06-04T02-30-44-443Z.yml  page-2026-06-04T02-31-24-665Z.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
database/: dnb_harness_experiment_report.md
dnb_harness/: __init__.py
docs/: ARCHITECTURE.md  EXTRACT_GUARD_PLAN.md  GOLDENSET.md  INTERFACES.md  PLAN.md  README.md  ROADMAP.md  Role_Dividing.md  STATUS.md  golden_master.md  ontology_policy_explainer.html  ontology_prd.md  tree.md  실행계획.md  역할분담.md  작성요령.md  필독_5_29.md  한글tree.md
ontology/: field_policies.yaml  shapes.ttl  trust_fund.ttl
reports/: _allmissing_b.json  compare_det.md  stats_base_vs_full.json  stats_det.json  stats_off_vs_on.json
scripts/: __init__.py  analyze_30reps.py  baseline_judge.py  expand_golden.py  extract_5_runs.py  extract_full_pipeline.py  extract_v2.py  harness_run.py  hello_gemma.py  inspect_pdfs.py  render_figma_ontology_svg.py  render_final_paper_pdf.py  render_mermaid.py  render_ontology_graph.py  run_30reps.py  run_extract_once.py  score_harness_norm.py  score_ontology_policy.py  smoke_temp0.py  summarize_vf_0607.py  test_g2_fake_citation.py
src/: __init__.py
tests/: test_anthropic_client.py  test_baseline.py  test_canonical_compare.py  test_canonical_parsers.py  test_canonical_pipeline.py  test_canonical_policy.py  test_cli.py  (+17 more)
(+231 files in other folders)
