[project]
name = "dnb-harness"
version = "0.1.0"
description = "Ontology-based validation harness for private fund trust contracts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "jsonschema>=4.21.0",
    "rdflib>=7.0.0",
    "pyshacl>=0.26.0",
    "pypdf>=4.2.0",
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "pillow>=10.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "tiktoken>=0.7.0",
    "jupyterlab>=4.1.0",
    "ipykernel>=6.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
